# minyad-core

./: .dockerignore  .env.example  .gitignore  .public-release-approved  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  TODO.md  alembic.ini  charging_strategy.md  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.yml  forecast_strategy.md  pyproject.toml  report_scan.md  requirements.txt  sonar-project.properties  strategy_v3.md
.github/workflows/: build-images.yml  ci.yml  deploy.yml  quick-release.yml  release.yml
api/: Dockerfile  dryad.py  main.py  mqtt_handlers.py  payload_helpers.py  requirements.txt  state.py
api/routers/: agent.py  battery.py  dashboard.py  grid.py  health.py  settings.py
control/: Dockerfile  hysteresis.py  inverter.py  main.py  ramp_manager.py  state.py
deadman/: Dockerfile  main.py
docs/: minyad_forecast_contract.md  monitoring.md  prometheus-handoff.md  rs485-modbus-guide.md
forecast/: Dockerfile  main.py  requirements.txt
frontend/: Dockerfile  assets.py  main.py  views.py
host-services/: .env.example  README.md  dsmr_bridge.py  dsmr_bridge.service  enphase_bridge.py  enphase_bridge.service  enphase_token_refresh.py  enphase_token_refresh.service  enphase_token_refresh.timer  goodwe_bridge.py  goodwe_bridge.service  minyad-explain  minyad-explain.requirements.txt  minyad_explain.py  mqtt_browse.py  requirements.txt
host-services/backends/: __init__.py  base.py  composite_goodwe_backend.py  goodwe_backend.py  modbus_backend.py
ingestion/: Dockerfile  main.py  requirements.txt
ingestion/sensors/: dsmr.py
migrate/: Dockerfile  alembic.ini  requirements.txt
migrate/alembic/: env.py
migrations/: env.py
minyad/: __init__.py
minyad-agent/: Dockerfile  agent.py  config.py  minyad_client.py  prompts.py  requirements.txt  tools.py
minyad-strategy/: Dockerfile  requirements.txt
minyad-trade/: Dockerfile  config.py  epex_collector.py  requirements.txt
mobile-frontend/: Dockerfile  main.py  requirements.txt
monitoring/: Dockerfile  mqtt_observer.py  requirements.txt
mosquitto/: mosquitto.conf
prometheus/: minyad-alerts.yml  minyad-recording.yml  minyad-scrape.yml
reporting/: Dockerfile  main.py  requirements.txt
scripts/: compare_strategies.py  configure_host_metrics_systemd.sh  configure_metrics_firewalld.sh  dump_agent_decisions.py  fetch_dryad.py  generate_internal_tls_cert.sh  public_release_gate.py  trivy_to_sonar.py
shared/: db.py  logging_utils.py  mqtt_client.py
tests/: test_agent_dashboard.py  test_api_auth.py  test_api_battery_settings.py  test_api_cors.py  test_api_dashboard_helpers.py  test_api_pure_helpers.py  test_api_settings_endpoints.py  test_api_status_coercion.py  test_api_status_payloads.py  test_api_surplus_integration.py  test_charge_controller.py  test_container_hardening.py  test_control_app_dispatch.py  test_control_bridge_health.py  test_core.py  test_dashboard_plan_curves.py  test_dashboard_window_bounds.py  test_dryad.py  test_dsmr_bridge.py  test_dsmr_sensor.py  test_enphase_bridge.py  test_enphase_bridge_helpers.py  test_enphase_token_refresh.py  test_forecast_environment.py  test_forecast_retry.py  test_frontend_api_proxy.py  test_goodwe_backend.py  test_goodwe_bridge.py  test_goodwe_composite_backend.py  test_host_mqtt_callback_api.py  test_hysteresis.py  test_logging_utils.py  test_minyad_agent_client.py  test_minyad_agent_cost_opts.py  test_minyad_agent_guard.py  test_minyad_agent_tools.py  test_modbus_backend.py  test_mqtt_client.py  test_p1_reader.py  test_project_metadata.py  (+3 more)
(+116 files in other folders)
