[project]
name = "minyad-core"
version = "0.1.0"
description = "Home energy plumbing: battery/PV/grid-meter/MQTT/Prometheus integration."
requires-python = ">=3.12"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
preview = true
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF", "FAST002"]
ignore = [
    "E501", # line-too-long: dominated by inline HTML/CSS/JS strings in frontend/*, not a real readability issue
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "RUF069", # float equality assertions against deterministically-computed fixtures are the intended test pattern
]
"frontend/*.py" = [
    "RUF001", # deliberate typography (en-dash, multiplication sign, angle quotes) in user-facing UI copy
]

[tool.pyright]
include = ["api", "control", "host-services", "ingestion", "forecast", "reporting", "shared", "scripts", "migrate"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = "warning" # tolerates the optional, privately-hosted minyad.strategy.v3 import
reportPrivateImportUsage = "none" # paho-mqtt exports CallbackAPIVersion/ReasonCode/Properties at runtime but omits them from __all__
